Updating package file

--- a/node-server/package.json
+++ b/node-server/package.json
@@ -1,5 +1,6 @@
 { "dependencies" :
   { "nodejs-websocket" : "latest",
-    "websocket": "latest"
+    "websocket": "latest",
+    "i2c": "0.1.8"
   }
 }
